k8s/istio/namespace.yaml
# k8s/istio/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    istio.io/rev: default
