k8s/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: retail
spec:
  mtls:
    mode: STRICT
