k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: retail-gateway
  namespace: retail
spec:
  selector:
    istio: ingressgateway


  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP


      hosts:
        - retail.metatechz.store
