k8s/istio/destinationrule-orders.yaml
# apiVersion: networking.istio.io/v1
# kind: DestinationRule
# metadata:
#   name: orders
#   namespace: retail
# spec:
#   host: orders
#   subsets:
#     - name: v1
#       labels:
#         version: v1

#     - name: v2
#       labels:
#         version: v2


apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: orders
  namespace: retail
spec:
  host: orders

  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
