k8s/istio/retail-ingress.yaml
# k8s/ingress/retail-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: retail-ingress
  namespace: retail

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # Istio gateway readiness endpoint
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready

    # Istio gateway exposes readiness on 15021
    alb.ingress.kubernetes.io/healthcheck-port: "15021"

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

    alb.ingress.kubernetes.io/success-codes: "200"

spec:

  ingressClassName: alb

  rules:

    - host: retail.metatechz.store

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: istio-ingressgateway

                port:
                  number: 80
