k8s/istio/virtualservice-ui.yaml
# apiVersion: networking.istio.io/v1
# kind: VirtualService
# metadata:
#   name: retail-ui
#   namespace: retail
# spec:
#   hosts:
#     - retail.metatechz.store
#   gateways:
#     - retail-gateway
#   http:
#     - match:
#         - uri:
#             prefix: /
#       route:
#         - destination:
#             host: ui
#             port:
#               number: 80

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: retail-ui
  namespace: retail
spec:
  hosts:
    - retail.metatechz.store

  gateways:
    - retail-gateway

  http:
    - match:
        - uri:
            prefix: /

      route:
        - destination:
            host: ui
            port:
              number: 80
