k8s/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: orders-policy
  namespace: retail
spec:
  selector:
    matchLabels:
      app: orders

  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/retail/sa/ui"
